# specless

./: .buildinfo  .gitignore  .readthedocs.yaml  Dockerfile  README.md  coverage.json  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements-dev.txt  requirements.txt  requirements_.txt  search.html  searchindex.js  setup.py  tox.ini  tpo.py  usage.html
.devcontainer/: devcontainer.json  docker-compose.yml
.doctrees/: index.doctree  usage.doctree
.doctrees/_autosummary/: specless.api.doctree  specless.api.ortools_interface.OrtoolsInterface.doctree  specless.api.ortools_interface.RoboticsTaskModel.doctree  specless.api.ortools_interface.doctree  specless.automaton.base.Automaton.doctree  specless.automaton.base.doctree  specless.automaton.base.edge_weight_to_string.doctree  specless.automaton.base.node_obs_to_str.doctree  specless.automaton.dfa.DFA.doctree  specless.automaton.dfa.SafetyDFA.doctree  specless.automaton.dfa.SafetyDFABuilder.doctree  specless.automaton.dfa.doctree  specless.automaton.doctree  specless.automaton.factory.AutomatonCollection.doctree  specless.automaton.factory.doctree  specless.automaton.fdfa.FDFA.doctree  specless.automaton.fdfa.FDFABuilder.doctree  specless.automaton.fdfa.doctree  specless.automaton.mps.BMPS_exact.doctree  specless.automaton.mps.BMPS_search_step.doctree  specless.automaton.mps.SWDFA_MPS.doctree  specless.automaton.mps.doctree  specless.automaton.mps.postprocess_MPS.doctree  specless.automaton.mps.should_use_BMPS_exact.doctree  specless.automaton.pdfa.PDFA.doctree  specless.automaton.pdfa.PDFABuilder.doctree  specless.automaton.pdfa.check_predict_method.doctree  specless.automaton.pdfa.doctree  specless.automaton.product.Product.doctree  specless.automaton.product.ProductBuilder.doctree  specless.automaton.product.doctree  specless.automaton.transition_system.MinigridTransitionSystem.doctree  specless.automaton.transition_system.TSBuilder.doctree  specless.automaton.transition_system.TransitionSystem.doctree  specless.automaton.transition_system.build_transition_system.doctree  specless.automaton.transition_system.doctree  specless.automaton.types.doctree  specless.automaton.utils.MaxHeap.doctree  specless.automaton.utils.MaxHeapObj.doctree  specless.automaton.utils.MinHeap.doctree  (+147 more)
.github/workflows/: default.yml  deploy-documentation.yml  generate-documentation.yml  main.yml  ruff.yaml  test-docs-gen.yml  test.yml  testcoverage.yml  tox-pytest.yml
_autosummary/: specless.api.html  specless.api.ortools_interface.OrtoolsInterface.html  specless.api.ortools_interface.RoboticsTaskModel.html  specless.api.ortools_interface.html  specless.automaton.base.Automaton.html  specless.automaton.base.edge_weight_to_string.html  specless.automaton.base.html  specless.automaton.base.node_obs_to_str.html  specless.automaton.dfa.DFA.html  specless.automaton.dfa.SafetyDFA.html  specless.automaton.dfa.SafetyDFABuilder.html  specless.automaton.dfa.html  specless.automaton.factory.AutomatonCollection.html  specless.automaton.factory.html  specless.automaton.fdfa.FDFA.html  specless.automaton.fdfa.FDFABuilder.html  specless.automaton.fdfa.html  specless.automaton.html  specless.automaton.mps.BMPS_exact.html  specless.automaton.mps.BMPS_search_step.html  specless.automaton.mps.SWDFA_MPS.html  specless.automaton.mps.html  specless.automaton.mps.postprocess_MPS.html  specless.automaton.mps.should_use_BMPS_exact.html  specless.automaton.pdfa.PDFA.html  specless.automaton.pdfa.PDFABuilder.html  specless.automaton.pdfa.check_predict_method.html  specless.automaton.pdfa.html  specless.automaton.product.Product.html  specless.automaton.product.ProductBuilder.html  specless.automaton.product.html  specless.automaton.transition_system.MinigridTransitionSystem.html  specless.automaton.transition_system.TSBuilder.html  specless.automaton.transition_system.TransitionSystem.html  specless.automaton.transition_system.build_transition_system.html  specless.automaton.transition_system.html  specless.automaton.types.html  specless.automaton.utils.MaxHeap.html  specless.automaton.utils.MaxHeapObj.html  specless.automaton.utils.MinHeap.html  (+147 more)
_modules/: index.html
_modules/specless/: dataset.html  doctest.html  io.html  parser.html  specification_.html  strategy.html  synthesis.html
_sources/: index.rst.txt  reference.rst.txt
_sources/_autosummary/: specless.api.ortools_interface.OrtoolsInterface.rst.txt  specless.api.ortools_interface.RoboticsTaskModel.rst.txt  specless.api.ortools_interface.rst.txt  specless.api.rst.txt  specless.automaton.base.Automaton.rst.txt  specless.automaton.base.edge_weight_to_string.rst.txt  specless.automaton.base.node_obs_to_str.rst.txt  specless.automaton.base.rst.txt  specless.automaton.dfa.DFA.rst.txt  specless.automaton.dfa.SafetyDFA.rst.txt  specless.automaton.dfa.SafetyDFABuilder.rst.txt  specless.automaton.dfa.rst.txt  specless.automaton.factory.AutomatonCollection.rst.txt  specless.automaton.factory.rst.txt  specless.automaton.fdfa.FDFA.rst.txt  specless.automaton.fdfa.FDFABuilder.rst.txt  specless.automaton.fdfa.rst.txt  specless.automaton.mps.BMPS_exact.rst.txt  specless.automaton.mps.BMPS_search_step.rst.txt  specless.automaton.mps.SWDFA_MPS.rst.txt  specless.automaton.mps.postprocess_MPS.rst.txt  specless.automaton.mps.rst.txt  specless.automaton.mps.should_use_BMPS_exact.rst.txt  specless.automaton.pdfa.PDFA.rst.txt  specless.automaton.pdfa.PDFABuilder.rst.txt  specless.automaton.pdfa.check_predict_method.rst.txt  specless.automaton.pdfa.rst.txt  specless.automaton.product.Product.rst.txt  specless.automaton.product.ProductBuilder.rst.txt  specless.automaton.product.rst.txt  specless.automaton.rst.txt  specless.automaton.transition_system.MinigridTransitionSystem.rst.txt  (+155 more)
docs/: README.md  conf.py  index.rst  reference.rst  requirements.txt
specless/: __init__.py  const.py  dataset.py  demonstration.py  doctest.py  inference.py  io.py  parser.py  specification.py  specification_.py  strategy.py  synthesis.py  typing.py
tests/: test_dataset.py  test_synthesis.py
(+170 files in other folders)
